# Django_Project-MySite

./: .evn  README.md  demo.py  docker-compose.yaml  pyproject.toml  requirements.txt  virusnot.txt
CBV/mysite/shopapp/: views.py
Forms/mysite/shopapp/: views.py
mysite/: db.sqlite3  log. txt  log. txt.1  log. txt.2  log. txt.3  quieries.sql  requirements.txt  shopapp-fixtures.json  shopapp-products-fixtures.json  shopapp-products-fixtures.xml
mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py  0002_category.py  0003_tag.py  0004_article.py
mysite/myapiapp/: serializers.py  urls.py  views.py
mysite/myauth/: admin.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py  0003_alter_profile_avatar.py
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  utils.py  views.py
mysite/shopapp/fixtures/: products-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_product_crested_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options_product_created_by_and_more.py  0008_order_receipt_alter_product_created_by.py  0009_product_preview.py  0010_productimage.py  0011_alter_product_description_alter_product_name.py
(+46 files in other folders)
