[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["aa_lozovoy <aalozzzovoy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
django-rest-framework = "^0.1.0"
djangorestframework = "^3.15.0"
django-filter = "^24.1"
django-debug-toolbar = "^4.3.0"
pillow = "^10.2.0"
gunicorn = "^21.2.0"
sentry-sdk = "^2.2.0"
drf-spectacular = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
